nagp/app/api_combined_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - name: go-api-container
          image: satyamvatstyagi/user-management-service:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-loadbalancer
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
